Added images for ideas of skeleton Added contact page for ideas Modified index and about pages

--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -57,50 +57,20 @@
       </div>
     </div>
 
-    <!-- Marketing messaging and featurettes
+    <!-- Contact
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container marketing spacing">
+    <div class="container spacing">
 
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Michael Taft <span class="text-muted">Founder</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+      <div class="row">
+        <div class="col-sm-6">
+          <i class="fa fa-envelope fa-5x" aria-hidden="true"></i><br>E-Mail
         </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets/img/mike.jpg" alt="Michael Taft">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">K.B. Gebrekidan <span class="text-muted">Tutor</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" src="assets/img/kb.jpg" alt="KB Gebrekidan">
+        <div class="col-sm-6">
+          <i class="fa fa-phone fa-5x" aria-hidden="true"></i><br>Call Us
         </div>
       </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Jonathan Ceresa <span class="text-muted">Friend</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets/img/jon.jpg" alt="Jonathan Ceresa">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
-
 
       <!-- FOOTER -->
       <footer>
