Added Form Fields on Contact page Added Map image on Contact Page Changed the About page to have Horizontal Row of Tutors Changed some CSS - Body Color, Rounded corners of Navbar, Color of <hr> element

--- a/about_old.html
+++ b/about_old.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Meet the Tutors of Taft Prep School offering test preparation for standardized tests including SAT, ACT and graduate school entrance exams. Taft Prep also provides private tutoring and college admissions counseling.">
+    <meta name="description" content="Meet the Tutors of Taft Prep School">
     <meta name="author" content="Jonathan Ceresa">
     <link rel="icon" href="favicon.ico">
 
@@ -13,9 +13,9 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/carousel.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -50,9 +50,6 @@
                 <li class="active"><a href="about.html">Meet our Tutors</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li class="navbar-text">Call Us: 555-555-5555</li>
-              </ul>
             </div>
           </div>
         </nav>
@@ -64,33 +61,49 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container spacing">
+    <div class="container marketing spacing">
 
-      <div class="row">
-        <div class="col-sm-4">
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Michael Taft <span class="text-muted">Founder</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="assets/img/mike.jpg" alt="Michael Taft">
-          <h2>Michael Taft<br><span class="text-muted">Founder</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-
-        <div class="col-sm-4">
-          <img class="featurette-image img-responsive center-block" src="assets/img/kb.jpg" alt="KB Gebrekidan">
-          <h2>K.B. Gebrekidan<br><span class="text-muted">Tutor</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-
-        <div class="col-sm-4">
-          <img class="featurette-image img-responsive center-block" src="assets/img/jon.jpg" alt="Jonathan Ceresa">
-          <h2>Jonathan Ceresa<br><span class="text-muted">Friend</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
       </div>
 
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading">K.B. Gebrekidan <span class="text-muted">Tutor</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="featurette-image img-responsive center-block" src="assets/img/kb.jpg" alt="KB Gebrekidan">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Jonathan Ceresa <span class="text-muted">Friend</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="assets/img/jon.jpg" alt="Jonathan Ceresa">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
       <!-- /END THE FEATURETTES -->
+
 
       <!-- FOOTER -->
       <footer>
-        <hr class="featurette-divider">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2017 Taft Prep
       </footer>
