--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="The Website of Taft Prep School">
+    <meta name="description" content="Home page of Taft Prep School offering test preparation for standardized tests including SAT, ACT and graduate school entrance exams. Taft Prep also provides private tutoring and college admissions counseling.">
     <meta name="author" content="Jonathan Ceresa">
     <link rel="icon" href="favicon.ico">
 
@@ -13,9 +13,9 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/carousel.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -47,8 +47,11 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html">Meet our Tutors</a></li>
                 <li><a href="contact.html">Contact</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li class="navbar-text">Call Us: 555-555-5555</li>
               </ul>
             </div>
           </div>
@@ -141,6 +144,7 @@
 
       <!-- FOOTER -->
       <footer>
+        <hr class="featurette-divider">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2017 Taft Prep
       </footer>
