--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Home page of Taft Prep School offering test preparation for standardized tests including SAT, ACT and graduate school entrance exams. Taft Prep also provides private tutoring and college admissions counseling.">
-    <meta name="author" content="Jonathan Ceresa">
+    <meta name="author" content="techargonauts.com">
     <link rel="icon" href="favicon.ico">
 
     <title>Taft Prep Homepage</title>
