--- a/contact.html
+++ b/contact.html
@@ -1,124 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Contact Taft Prep School offering test preparation for standardized tests including SAT, ACT and graduate school entrance exams. Taft Prep also provides private tutoring and college admissions counseling.">
-    <meta name="author" content="techargonauts.com">
-    <link rel="icon" href="favicon.ico">
+---
+layout: default
+title: Contact us
+---
 
-    <title>Taft Prep Homepage</title>
+<!-- Contact ================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/carousel.css">
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<div class="container spacing">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <div class="row">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-  </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="index.html">Taft Prep</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">Meet our Tutors</a></li>
-                <li class="active"><a href="contact.html">Contact</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <li class="navbar-text">Call Us: 555-555-5555</li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-
-      </div>
+<!-- To be deleted -->
+    <div class="col-sm-6">
+      <h3>Happily serving greater New York City</h3>
+      <p>We happily serve all five burroughs. Please feel free to contact us with any questions or comments.</p>
+      <img class="featurette-image img-responsive center-block" src="assets/img/nymap.png" alt="Michael Taft">
+      <!-- <i class="fa fa-envelope fa-5x" aria-hidden="true"></i><br>E-Mail<br>
+      <i class="fa fa-phone fa-5x" aria-hidden="true"></i><br>Call Us<br> -->
     </div>
-
-    <!-- Contact
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div class="container spacing">
-
-      <div class="row">
-
-    <!-- To be deleted -->
-        <div class="col-sm-6">
-          <h3>Happily serving greater New York City</h3>
-          <p>We happily serve all five burroughs. Please feel free to contact us with any questions or comments.</p>
-          <img class="featurette-image img-responsive center-block" src="assets/img/nymap.png" alt="Michael Taft">
-          <!-- <i class="fa fa-envelope fa-5x" aria-hidden="true"></i><br>E-Mail<br>
-          <i class="fa fa-phone fa-5x" aria-hidden="true"></i><br>Call Us<br> -->
+<!-- Forms to be submitted to Email -->
+    <div class="col-sm-6">
+      <form id="contact-form">
+        <h3>Contact us.</h3>
+        <div class="form-group">
+          <input required type="text" class="form-control" id="name" placeholder="Your Name" aria-describedby="Your Name">
         </div>
-    <!-- Forms to be submitted to Email -->
-        <div class="col-sm-6">
-          <form id="contact-form">
-            <h3>Contact us.</h3>
-            <div class="form-group">
-              <input required type="text" class="form-control" id="name" placeholder="Your Name" aria-describedby="Your Name">
-            </div>
-            <div class="form-group">
-              <input required type="email" class="form-control" id="email" placeholder="Your Email address" aria-describedby="E Mail">
-            </div>
-            <div class="form-group">
-              <textarea required type="text" class="form-control" id="question" placeholder="Type your question or comment here." aria-describedby="E Mail"></textarea>
-            </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
-            <div id="success-alert" class="hidden alert alert-success">
-              <strong>Success!</strong> You will be contacted by our tutors shortly.
-            </div>
-            <div id="error-alert" class="hidden alert alert-danger">
-              <strong>Error!</strong> There has been an error when trying to submit the information.
-            </div>
-          </form>
+        <div class="form-group">
+          <input required type="email" class="form-control" id="email" placeholder="Your Email address" aria-describedby="E Mail">
         </div>
-      </div>
+        <div class="form-group">
+          <textarea required type="text" class="form-control" id="question" placeholder="Type your question or comment here." aria-describedby="E Mail"></textarea>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+        <div id="success-alert" class="hidden alert alert-success">
+          <strong>Success!</strong> You will be contacted by our tutors shortly.
+        </div>
+        <div id="error-alert" class="hidden alert alert-danger">
+          <strong>Error!</strong> There has been an error when trying to submit the information.
+        </div>
+      </form>
+    </div>
+  </div>
 
-      <!-- FOOTER -->
-      <footer>
-        <hr class="featurette-divider">
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Taft Prep
-      </footer>
-
-    </div><!-- /.container -->
-
-
-    <!-- Javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
-  </body>
-</html>
+</div><!-- /.container -->
