--- a/error.html
+++ b/error.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
-  <html lang="en">
-    <body><h1>There has been an error.</h1></body>
-  </html>
+---
+layout: default
+---
+<div class="container spacing">
+    <h1>There has been an error.</h1>
+</div>
