Redesign of the website.

--- a/about.html
+++ b/about.html
@@ -1,32 +1,20 @@
 ---
 layout: default
-title: Meet our tutors
+title: About
 ---
 
-<!-- Marketing messaging and featurettes ================================================== -->
-<!-- Wrap the rest of the page in another container to center all the content. -->
-
-<div class="container spacing">
-
+<div class="container text-center">
+  <div class="row content">
+    <div class="col-xs-12">
+      <h3>{{page.title}}</h3>
+      <p>Taft Prep is a boutique tutoring company specializing in students with ADD/ADHD based in New York City. </p>
+      <p>Over the years, the company has worked with students of all ages with the singular goal of getting them to the top of the class. </p>
+      <p>Taft Prep has had the good fortune of working with incredible clients in the New York City community and consistently strives to develop close partnerships with the major decision-makers in its students’ lives. Rather than take on many clients at a time, the company has always preferred to take an in-depth approach with a select number of students.</p>
+    </div><!-- /.col-xs-12 -->
+  </div><!-- /.row -->
   <div class="row">
-    <div class="col-sm-4">
-      <img class="featurette-image img-responsive center-block" src="assets/img/mike.jpg" alt="Michael Taft">
-      <h2>Michael Taft<br><span class="text-muted">Founder</span></h2>
-      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-    </div>
-
-    <div class="col-sm-4">
-      <img class="featurette-image img-responsive center-block" src="assets/img/kb.jpg" alt="KB Gebrekidan">
-      <h2>K.B. Gebrekidan<br><span class="text-muted">Tutor</span></h2>
-      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-    </div>
-
-    <div class="col-sm-4">
-      <img class="featurette-image img-responsive center-block" src="assets/img/jon.jpg" alt="Jonathan Ceresa">
-      <h2>Jonathan Ceresa<br><span class="text-muted">Friend</span></h2>
-      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-    </div>
-  </div>
-
-  <!-- /END THE FEATURETTES -->
+    <div class="col-xs-12">
+      <img class="img-responsive center-block content-image" src="{{base.url}}/assets/img/logo.png" alt="Taft Prep Logo">
+    </div><!-- /.col-xs-12 -->
+  </div><!-- /.row -->
 </div><!-- /.container -->
