Update all image file paths with site.baseurl liquid tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Taft Prep Homepage
 <div id="homepage" class="container-fluid center-block">
   <div class="row">
     <div class="col-xs-12">
-      <img class="img-responsive center-block" src="{{base.url}}/assets/img/logo.png" alt="Taft Prep Logo">
+      <img class="img-responsive center-block" src="{{ site.baseurl }}/assets/img/logo.png" alt="Taft Prep Logo">
     </div><!-- /.col-xs-12 -->
   </div><!-- /.row -->
     <div class="row">
