--- a/philosophy.html
+++ b/philosophy.html
@@ -14,7 +14,7 @@ title: Philosophy
   </div><!-- /.row -->
   <div class="row">
     <div class="col-xs-12">
-      <img class="img-responsive center-block content-image" src="{{base.url}}/assets/img/logo.png" alt="Taft Prep Logo">
+      <img class="img-responsive center-block content-image" src="{{ site.baseurl }}/assets/img/logo.png" alt="Taft Prep Logo">
     </div><!-- /.col-xs-12 -->
   </div><!-- /.row -->
 </div><!-- /.container -->
