--- a/tutors.html
+++ b/tutors.html
@@ -13,7 +13,7 @@ title: Our Tutors
       <p>He works mainly with High School students and has seen great success in helping his students prepare for Biology, Chemistry, and Physics. He is currently a medical school student at Mount Sinai Icahn School of Medicine and works with students in the evenings and on weekends.</p>
     </div>
     <div class="col-md-5 col-md-pull-7">
-      <img class="img-responsive center-block" src="assets/img/kb.jpg" alt="KB Gebrekidan">
+      <img class="img-responsive center-block" src="{{ site.baseurl }}/assets/img/kb.jpg" alt="KB Gebrekidan">
     </div>
   </div><!-- /.row -->
 
@@ -26,7 +26,7 @@ title: Our Tutors
       <p>He works mainly with High School students in preparation for Calculus and Precalculus. He is currently working in Asset Management at The Blackstone Group and works with students on weekends.</p>
     </div>
     <div class="col-md-5 col-md-pull-7">
-      <img class="featurette-image img-responsive center-block" src="assets/img/kb.jpg" alt="KB Gebrekidan">
+      <img class="featurette-image img-responsive center-block" src="{{ site.baseurl }}/assets/img/kb.jpg" alt="KB Gebrekidan">
     </div>
   </div><!-- /.row -->
 
@@ -39,13 +39,13 @@ title: Our Tutors
       <p>He volunteers his free time at the Child Mind Institute, a nonprofit dedicated to transforming the lives of children struggling with learning disorders. He also tutors pro bono at The New York Center for Children, is currently building an education-technology platform, and plans on attending Business School.</p>
     </div>
     <div class="col-md-5 col-md-pull-7">
-      <img class="featurette-image img-responsive center-block" src="assets/img/kb.jpg" alt="KB Gebrekidan">
+      <img class="featurette-image img-responsive center-block" src="{{ site.baseurl }}/assets/img/kb.jpg" alt="KB Gebrekidan">
     </div>
   </div><!-- /.row -->
 
   <div class="row">
     <div class="col-xs-12">
-      <img class="img-responsive center-block content-image" src="{{base.url}}/assets/img/logo.png" alt="Taft Prep Logo">
+      <img class="img-responsive center-block content-image" src="{{ site.baseurl }}/assets/img/logo.png" alt="Taft Prep Logo">
     </div><!-- /.col-xs-12 -->
   </div><!-- /.row -->
 
