Fix path for Mike Taft phot in tutors page

--- a/tutors.html
+++ b/tutors.html
@@ -39,7 +39,7 @@ title: Our Tutors
       <p>He volunteers his free time at the Child Mind Institute, a nonprofit dedicated to transforming the lives of children struggling with learning disorders. He also tutors pro bono at The New York Center for Children, is currently building an education-technology platform, and plans on attending Business School.</p>
     </div>
     <div class="col-md-5 col-md-pull-7">
-      <img class="featurette-image img-responsive center-block" src="{{ site.baseurl }}/assets/img/kb.jpg" alt="Michael Taft Photo">
+      <img class="featurette-image img-responsive center-block" src="{{ site.baseurl }}/assets/img/mike.jpg" alt="Michael Taft Photo">
     </div>
   </div><!-- /.row -->
 
