Add background image. Adjust Styling for background image.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Taft Prep Homepage
 <!-- Marketing messaging and featurettes ================================================== -->
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
-<div id="homepage" class="container-fluid center-block">
+<div id="homepage" class="container center-block">
   <div class="row">
     <div class="col-xs-12">
       <img class="img-responsive center-block" src="{{ site.baseurl }}/assets/img/logo.png" alt="Taft Prep Logo">
