--- a/tutors.html
+++ b/tutors.html
@@ -23,7 +23,7 @@ title: Our Tutors
     <div class="col-md-7 col-md-push-5">
       <h2 class="featurette-heading">Kidus Gebrekidan</h2>
       <h4>Kidus is Taft Prep’s Higher Mathematics specialist.</h4>
-      <p>He works mainly with High School students in preparation for Calculus and Precalculus. He is currently working in Alternative Asset Management and works with students on weekends.</p>
+      <p>He works mainly with High School students in preparation for Precalculus and Calculus. He is currently working at a top alternative asset management firm in NYC and works with students on weekends.</p>
     </div>
     <div class="col-md-5 col-md-pull-7">
       <img class="featurette-image img-responsive center-block" src="{{ site.baseurl }}/assets/img/kb.png" alt="Kidus Gebrekidan Photo">
