Update contact grammar

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ title: Contact Us
   <div class="row content">
     <div class="col-xs-12">
       <h3>{{page.title}}</h3>
-      <p>Feel free to reach out and schedule a free 30-minute consultation where we will discuss your child’s perceived areas of improvement as well as strategy.</p>
+      <p>Feel free to reach out and schedule a free 30-minute consultation to discuss your child’s perceived areas of improvement and chat about strategy.</p>
       <a href="mailto:taftprep@gmail.com">taftprep@gmail.com</a>
       <p>(917) 545-8891</p>
     </div><!-- /.col-xs-12 -->
