Add more description to the Title tag for SEO purposes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Taft Prep Homepage
+title: Taft Prep Homepage - Tutoring company specializing in ADD tutoring, ADHD tutoring, private tutoring, learning disability, learning difficulties, nyc tutoring, nyc private tutoring, top nyc tutors, best nyc tutors, elementary school tutor
 ---
 
 
