--- a/tutors.html
+++ b/tutors.html
@@ -37,7 +37,7 @@ title: Our Tutors
       <h2 class="featurette-heading">Michael Taft</h2>
       <h4>Michael is Taft Prep’s founder and specializes in elementary and middle school students with ADD/ADHD.</h4>
       <p>Michael is specialized in Mathematics and English, although he also teaches History, Science, and Spanish. He volunteers his free time at the Child Mind Institute, a nonprofit dedicated to transforming the lives of children struggling with learning disorders. He also tutors pro bono at The New York Center for Children, is currently building an education-technology platform,
-and plans on attending graduate school for Applied Mathematics.</p>
+and is attending Columbia University for a Masters in Applied Mathematics.</p>
     </div>
     <div class="col-md-5 col-md-pull-7">
       <img class="featurette-image img-responsive center-block" src="{{ site.baseurl }}/assets/img/mike.png" alt="Michael Taft Photo">
