--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,7 @@ title: Contact Us
     <div class="col-xs-12">
       <h3>{{page.title}}</h3>
       <p>Feel free to reach out and schedule a free 30-minute consultation where we will discuss your child’s perceived areas of improvement as well as strategy.</p>
-      <a href="mailto:taftprep@gmail.com">taftprep@gmail.com</a>
-      <p>(917) 545-8891</p>
+      <a href="mailto:michael.taft.ab@gmail.com">michael.taft.ab@gmail.com</a>
     </div><!-- /.col-xs-12 -->
   </div><!-- /.row -->
   <div class="row">
