--- a/tutors.html
+++ b/tutors.html
@@ -36,8 +36,7 @@ title: Our Tutors
     <div class="col-md-7 col-md-push-5">
       <h2 class="featurette-heading">Michael Taft</h2>
       <h4>Michael is Taft Prep’s founder and specializes in elementary and middle school students with ADD/ADHD.</h4>
-      <p>Michael is specialized in Mathematics and English, although he also teaches History, Science, and Spanish. He volunteers his free time at the Child Mind Institute, a nonprofit dedicated to transforming the lives of children struggling with learning disorders. He also tutors pro bono at The New York Center for Children, is currently building an education-technology platform,
-and plans on attending Business School.</p>
+      <p>Michael is specialized in Mathematics and English, although he also teaches History, Science, and Spanish. He volunteers his free time at the Child Mind Institute, a nonprofit dedicated to transforming the lives of children struggling with learning disorders. He also tutors pro bono at The New York Center for Children, and is currently pursuing a Masters degree in Applied Mathematics at Columbia University.</p>
     </div>
     <div class="col-md-5 col-md-pull-7">
       <img class="featurette-image img-responsive center-block" src="{{ site.baseurl }}/assets/img/mike.png" alt="Michael Taft Photo">
