--- a/philosophy.html
+++ b/philosophy.html
@@ -9,7 +9,7 @@ title: Philosophy
       <h3>{{page.title}}</h3>
       <p>Taft Prep’s singular goal is to get students to the top of their classes.</p>
       <p>Aside from tutoring, we believe that this mission requires effort and input from all of the people involved in the student’s education. To ensure this, Taft Prep establishes open lines of communication with teachers, guidance counselors, psychologists, and doctors and in doing so, develops an extensive “Team” that connects around the student.</p>
-      <p>Taft Prep also believes in motivation and positive thinking. We have found that when our students begin working with us, they have fallen behind due to their ADD/ADHD. This takes a toll on their confidence and their perception of their abilities. We find it crucial to alter this thinking. Through our exercises and various academic coaching strategies, we hold this change in attitude as highly as we hold a jump in grades.</p>
+      <p>Taft Prep also strongly believes in motivation and positive thinking. We have often found that by the time our students begin working with us, they have fallen behind in one or more areas. This takes a toll on their confidence and their perception of their abilities. We find it crucial to alter this thinking before it becomes increasingly damaging. Through our exercises and various academic coaching strategies, we hold this change in attitude as highly as we hold a jump in grades.</p>
     </div><!-- /.col-xs-12 -->
   </div><!-- /.row -->
   <div class="row">
