--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Taft Prep Homepage - Tutoring company specializing in ADD tutoring, ADHD 
       <div class="col-xs-12">
         <ul class="text-center">
           <li><a href="about.html">About</a></li>
-          <li><a href="philosophy.html">Philosophy</a></li>
+          <li><a href="philosophy.html">Our Philosophy</a></li>
           <li><a href="tutors.html">Our Tutors</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
